# Python_Lab

Laboratorios/Lab01/: README.md  pyproject.toml  setup_instructions.bat
Laboratorios/Lab02/: README.md  paso_a_paso.md  reporte_general.json  ventas.json
Laboratorios/Lab03/: README.md  context_managers.py  decoradores.py  ejemplo_simple.py  ejemplos_practicos.py  generadores.py
Laboratorios/Lab04/: README.md
Laboratorios/Lab04/examples/: example_1_basic.py  example_2_validation.py  example_3_compare_and_sort.py
Laboratorios/Lab04/scripts/: run_all_examples.py
Laboratorios/Lab04/src/: converters.py  order_entity.py  order_models.py
Laboratorios/Lab05/: README.md  ejecutar_tests.py  ejemplo_1_basico.py  ejemplo_2_avanzado.py  ejemplo_3_utils.py  pyproject.toml  requirements-dev.txt  requirements.txt  verificar_calidad.py  verificar_tipos.py
Laboratorios/Lab05/src/: __init__.py  models.py  services.py  utils.py
Laboratorios/Lab05/test/: test_models.py  test_services.py  test_utils.py
Laboratorios/Lab06/: README.md  datos_ejemplo.csv  ejemplo1_basico.py  ejemplo2_metricas_json.py  ejemplo3_logging_completo.py  instrucciones_paso_a_paso.md  resultados.json  resultados_completos.json  resumen_procesamiento.txt
Laboratorios/Lab07/: README.md  ejemplo1_basico.py  ejemplo2_reintentos.py  ejemplo3_streaming.py  lab_completo.py  prueba_get.py  prueba_get_02.py  prueba_get_03.py
Laboratorios/Lab07/utils/: exceptions.py  http_client.py
Laboratorios/Lab08/: README.md  alembic.ini  crud.py  database.py  ejemplo1_basico.py  ejemplo2_avanzado.py  ejemplo3_migraciones.py  guia_completa.md  lab_migrations.db  lab_migrations_backup.db  models.py  requirements.txt  test_crud.py
Laboratorios/Lab08/alembic/: env.py
Laboratorios/Lab08/alembic/versions/: 001_initial_migration.py
Laboratorios/Lab09/: GUIA_COMPLETA.md  README.md  ejemplo_avanzado.py  main.py  orders.db  requirements.txt  setup.py  test_orders.py
Laboratorios/Lab09/examples/: ejemplo_avanzado.py  ejemplo_basico.py  ejemplo_testing.py
Laboratorios/Lab10/: README.md  requirements.txt  run_tests.py
Laboratorios/Lab10/htmlcov/: coverage_html.js  d_145eef247bfb46b6___init___py.html  d_145eef247bfb46b6_calculadora_py.html  d_145eef247bfb46b6_models_py.html  d_145eef247bfb46b6_usuario_service_py.html  d_145eef247bfb46b6_validador_py.html  index.html  status.json
Laboratorios/Lab10/htmlcov/src/: calculadora.py
Laboratorios/Lab10/src/: models.py  usuario_service.py  validador.py
Laboratorios/Lab10/test/: test_calculadora.py  test_usuario_service.py  test_validador.py
